feat: improvements to api/mylist
